feat(table): 添加模型
